修改环境变量

--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,12 @@
 	<groupId>com.wp</groupId>
 	<artifactId>myBatisGenerator</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-  
-  
+    
+    <properties>
+	    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+    
 	<build>
 		<finalName>mybatis_generator</finalName>
 		<plugins>
